--- a/AndroidClientProj/res/values/strings.xml
+++ b/AndroidClientProj/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
 
     <string name="app_name">Whosin</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Nick Sucks.</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="user_name_caption">Username:</string>
+    <string name="user_password_caption">Password:</string>
 
 </resources>
