--- a/AndroidClientProj/res/values/strings.xml
+++ b/AndroidClientProj/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="user_name_caption">Username:</string>
     <string name="user_password_caption">Password:</string>
+    <string name="title_activity_new_user">NewUserActivity</string>
 
 </resources>
