Home Screen Creation
We now have a home screen

--- a/AndroidClientProj/res/values/strings.xml
+++ b/AndroidClientProj/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="user_name_caption">Username:</string>
     <string name="user_password_caption">Password:</string>
     <string name="title_activity_new_user">NewUserActivity</string>
+    <string name="title_activity_home">HomeActivity</string>
 
 </resources>
