--- a/AndroidClientProj/res/values/strings.xml
+++ b/AndroidClientProj/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_logout">LogoutActivity</string>
     <string name="title_activity_create_event">CreateEvent</string>
+    <string name="title_activity_add_users_to_event">AddUsersToEventActivity</string>
 
 </resources>
