--- a/AndroidClientProj/res/values/strings.xml
+++ b/AndroidClientProj/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="title_activity_logout">LogoutActivity</string>
     <string name="title_activity_create_event">CreateEvent</string>
     <string name="title_activity_add_users_to_event">AddUsersToEventActivity</string>
+    <string name="title_activity_add_users_to_group">AddUsersToGroupActivity</string>
+    <string name="title_activity_create_group">CreateGroupActivity</string>
 
 </resources>
