--- a/AndroidClientProj/res/values/strings.xml
+++ b/AndroidClientProj/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="title_activity_create_group">CreateGroupActivity</string>
     <string name="title_activity_get_all_users_for_group">GetAllUsersForGroup</string>
     <string name="title_activity_show_all_events_for_user">ShowAllEventsForUserActivity</string>
+    <string name="title_activity_get_groups_for_user">GetGroupsForUser</string>
 
 </resources>
